# agent-fi

./: .dockerignore  .env.example  .gitignore  MILESTONES.md  PRD.md  README.md  TODO.md  a2a-discovery-gpt.md  a2a-discovery-opus.md  a2a-discovery-todo.md  package-lock.json  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml  phase0-gate.yml
agent-demo/: README.md  package-lock.json  package.json
agent-demo/src/: helpers.ts  start-services.ts
agent-demo/src/agents/: marriott-agent.ts  restaurant-agent.ts  travel-planner-agent.ts
apps/agentrank/: Cargo.toml  Dockerfile  RAILWAY.md  README.md  railway.toml
apps/agentrank/crates/agentbot/: Cargo.toml
apps/agentrank/crates/agentbot/src/: card_expand.rs  crawl_run.rs  dedup.rs  discover_scheduler.rs  domain_probe.rs  error.rs  github_discover.rs  host_rate_limit.rs  index_pipeline.rs  lib.rs  main.rs  metrics_srv.rs  recrawl.rs  registry_sync.rs  sitemap_discovery.rs
apps/agentrank/crates/agentbot/tests/: ingest_integration.rs
apps/agentrank/crates/agentrank-sitemap/: Cargo.toml
apps/agentrank/crates/agentrank-sitemap/src/: lib.rs  parse.rs
apps/agentrank/crates/card/: Cargo.toml
apps/agentrank/crates/card/src/: error.rs  lib.rs  normalize.rs
apps/agentrank/crates/card/tests/: proptest_invariants.rs  schema_contract.rs
apps/agentrank/crates/card/tests/fixtures/: opus_style_card.json
apps/agentrank/crates/consoled/: Cargo.toml
apps/agentrank/crates/consoled/src/: lib.rs  main.rs
apps/agentrank/crates/consoled/tests/: console_api.rs
apps/agentrank/crates/crawl-policy/: Cargo.toml
apps/agentrank/crates/crawl-policy/src/: cache.rs  fetch.rs  lib.rs  parse.rs  url_policy.rs
apps/agentrank/crates/crawl-policy/tests/: table_url_policy.rs  url_policy_cases.json
apps/agentrank/crates/data-plane/: Cargo.toml
apps/agentrank/crates/data-plane/src/: lib.rs
apps/agentrank/crates/embed/: Cargo.toml
apps/agentrank/crates/embed/src/: lib.rs
apps/agentrank/crates/frontier/: Cargo.toml
apps/agentrank/crates/frontier/src/: lib.rs
apps/agentrank/crates/healthd/: Cargo.toml
apps/agentrank/crates/healthd/src/: main.rs
apps/agentrank/crates/registry-connectors/: Cargo.toml
apps/agentrank/crates/registry-connectors/src/: lib.rs  paginated_registries.rs
apps/agentrank/crates/search-index/: Cargo.toml
apps/agentrank/crates/search-index/src/: document.rs  error.rs  extract.rs  lib.rs  row.rs  schema.rs  search.rs  store.rs
apps/agentrank/crates/search-index/tests/: golden_search.rs  index_search.rs
apps/agentrank/crates/searchd/: Cargo.toml
apps/agentrank/crates/searchd/src/: a2a.rs  error.rs  fusion.rs  handlers.rs  lib.rs  main.rs  mcp.rs  metrics.rs  models.rs  rate_limit.rs  well_known.rs
apps/agentrank/crates/searchd/tests/: hybrid_qdrant_e2e.rs  live_search.rs
apps/agentrank/crates/vector/: Cargo.toml
apps/agentrank/crates/vector/src/: lib.rs
apps/agentrank/docker/: entrypoint-agentbot.sh  entrypoint-router.sh  entrypoint-searchd.sh
apps/agentrank/migrations/: 20260328120000_initial_schema.sql  20260328200000_demo_seed_agents.sql  20260329120000_console_domain_claims.sql  20260330120000_week6_frontier_index.sql  20260331120000_week8_crawler_v2.sql
apps/agentrank/openapi/: search-v0.1.yaml
apps/agentrank/schemas/: agent_card_core.schema.json
apps/agentrank/scripts/: gen_1k_agents_sql.py  hybrid_eval.sh  mcp_smoke.sh  phase0_gate.sh
apps/agentrank/tests/: search_golden.json
apps/agentrank/tests/fixtures/: phase0_seed_urls.txt
apps/agentrank/tests/hybrid_eval/: README.md
apps/console/: Dockerfile  index.html  package.json  railway.toml  tsconfig.json  vite.config.ts
apps/console/src/: App.test.tsx  App.tsx  api.ts  index.css  vite-env.d.ts
apps/dev/: README.md  docker-compose.yml
apps/internal-demo/: README.md  package-lock.json  package.json  tsconfig.json
apps/internal-demo/src/: config.ts  personal-agent.ts  playground.ts
apps/internal-demo/src/agents/: expedia-agent.ts
apps/internal-demo/src/data/: flights.ts  hotels.ts  restaurants.ts
apps/landing/: Dockerfile  README.md  THEME.md  index.html  package-lock.json  package.json  railway.toml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/landing/docker/: nginx.conf.template
apps/landing/src/: App.css  App.tsx  config.ts  index.css  vite-env.d.ts
apps/landing/src/components/: ConnectCard.css  ConnectCard.tsx  IntroOverlay.css  IntroOverlay.tsx  NavBar.css  NavBar.tsx  TryInBrowserWidget.css  TryInBrowserWidget.tsx
apps/landing/src/data/: roadmap.ts
apps/landing/src/lib/: absoluteHttpUrl.test.ts  absoluteHttpUrl.ts  searchApi.ts
apps/landing/src/pages/: AgentDetailPage.css  AgentDetailPage.tsx  ConnectPage.css  ConnectPage.tsx  HomePage.tsx  SearchPage.css  SearchPage.test.tsx  SearchPage.tsx
apps/landing/src/sections/: BuildingSection.css  BuildingSection.tsx  ContactSection.css  ContactSection.tsx  Hero.css  Hero.tsx  ProblemSection.css  ProblemSection.tsx  RoadmapSection.css  RoadmapSection.tsx  SolutionSection.css  SolutionSection.tsx  WhyUs.css  WhyUs.tsx
apps/ml-pipeline/: README.md  pyproject.toml
apps/ml-pipeline/src/ml_pipeline/: __init__.py
apps/ml-pipeline/tests/: test_placeholder.py
apps/public-agent/: README.md  package-lock.json  package.json  railway.toml  tsconfig.json
apps/public-agent/src/: index.ts
docs/: railway-architecture.md  security-fetch-policy.md
docs/api/: mcp-a2a-searchd.md
docs/grafana/: README.md  agentrank-overview.json
docs/runbooks/: agentbot-scheduler.md  crawler-domain-probe.md  crawler-registry-api.md  crawler-robots.md  crawler-sitemap.md  github-discover.md  registry-builtin.md  registry-http-json.md  registry-static-json.md
scripts/: search_p99.sh
