[workspace]
resolver = "2"
members = [
    "crates/data-plane",
    "crates/healthd",
    "crates/card",
    "crates/crawl-policy",
    "crates/frontier",
    "crates/agentbot",
    "crates/search-index",
    "crates/searchd",
    "crates/consoled",
    "crates/registry-connectors",
    "crates/embed",
    "crates/vector",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
