[package]
name = "agentrank-agentbot"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AgentBot v0.1 — fetch Agent Card, parse, persist"

[lib]
path = "src/lib.rs"

[[bin]]
name = "agentbot"
path = "src/main.rs"

[dependencies]
anyhow = "1"
agentrank-card = { path = "../card" }
agentrank-data-plane = { path = "../data-plane" }
agentrank-frontier = { path = "../frontier" }
clap = { version = "4", features = ["derive"] }
redis = { version = "0.27", features = ["tokio-comp"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "migrate", "json"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
axum = "0.7"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
