[package]
name = "agentrank-sitemap"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Parse agent-sitemap.xml and sitemap index for AgentRank discovery"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
metrics = "0.24"
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
