[package]
name = "agentrank-card"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A2A Agent Card parse, validate, and normalize for AgentRank ingest"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
url = "2"

[dev-dependencies]
jsonschema = "0.26"
proptest = "1"
serde_json = "1"
