[package]
name = "agentrank-consoled"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent Search Console API v0.1 (authenticated BFF)"

[lib]
path = "src/lib.rs"

[[bin]]
name = "consoled"
path = "src/main.rs"

[dependencies]
agentrank-data-plane = { path = "../data-plane" }
anyhow = "1"
axum = { version = "0.7", features = ["macros", "tokio"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "json", "migrate", "chrono"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
