[package]
name = "agentrank-data-plane"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared PostgreSQL and Redis connection helpers for AgentRank"

[dependencies]
redis = { version = "0.27", features = ["tokio-comp"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
