[package]
name = "agentrank-healthd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Health probe: PostgreSQL SELECT 1 and Redis PING"

[[bin]]
name = "healthd"
path = "src/main.rs"

[dependencies]
agentrank-data-plane = { path = "../data-plane" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
