[package]
name = "agentrank-registry-connectors"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Registry feed connectors → card URL discovery for AgentBot"

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "rt-multi-thread"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
