[package]
name = "agentrank-search-index"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tantivy search index over AgentRank agents (card skills text + metadata)"

[lib]
path = "src/lib.rs"

[[bin]]
name = "agentrank-index"
path = "src/bin/agentrank-index.rs"

[dependencies]
agentrank-data-plane = { path = "../data-plane" }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "json"] }
tantivy = "0.22"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
