[package]
name = "agentrank-searchd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AgentRank search HTTP API (Axum)"

[lib]
path = "src/lib.rs"

[[bin]]
name = "searchd"
path = "src/main.rs"

[dependencies]
agentrank-data-plane = { path = "../data-plane" }
agentrank-search-index = { path = "../search-index" }
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
http-body-util = "0.1"
redis = { version = "0.27", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "json", "migrate"] }
tantivy = "0.22"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde"] }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
